// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize html break tag 1`] = `
{
  "break": true,
  "children": [
    {
      "text": "",
    },
  ],
  "type": "p",
}
`;

exports[`deserialize html break tag with content in single string 1`] = `
{
  "break": true,
  "children": [
    {
      "text": "**hi**",
    },
  ],
  "type": "p",
}
`;

exports[`deserialize unknown html 1`] = `
{
  "children": [
    {
      "text": "<section>",
    },
  ],
  "type": "paragraph",
}
`;
